# ModernPowley

./: .gitattributes  .gitignore  AGENTS.md  DynamicVivacity.md  MP_ExecutiveSummary.md  ModernPowley.md  README.md  TODO.md  pyproject.toml
data/: CartridgeData.csv  ExpansionRatio.csv  Predictions.csv  README.md  calculated_metrics.csv  cartridge_data_from_grt.csv  demo_summary.txt  derived_metrics.csv  propellant_params.csv
data/GRT_Files/: 65CM_140ELDM_RL16_44F.grtload
data/reference/: davis_1981_table4.csv  original_powley_powder_scale.csv  original_powley_velocity_observations.csv
db/: cartridge_db.sqlite  create_db.py
docs/: Current_Findings.md  Equations.md  History.md  Introduction.md  Usage_Instructions.md
docs/audits/: archived_emulator_equation_audit.md  audit_completion_report.md  davis_1981_equation_and_example_reconciliation.md  davis_1981_evidence_intake.md  file_change_list.md  historical_reconstruction_file_change_list.md  historical_reconstruction_pass.md  inventory_generation_manifest.json  modern_powley_full_repository_audit.md  original_powley_reconstruction_closure.md  original_powley_reconstruction_completion_audit.md  original_powley_scale_recovery.md  (+1 more)
jupyter/: demo.ipynb
plots/: README.md
reference/: source_ledger.csv
scripts/: analysis.py  audit_regression.py  calculate_charge.py  calculate_metrics.py  compute_ba_eff.py  compute_predictions.py  create_db.py  generate_audit_inventory.py  parse_grt_cartridge.py  parse_grt_prop.py  plot_data.py  plot_rc_bulletweight.py  plot_rc_sd.py  propellant_selector.py
(+163 files in other folders)
